--- a/style.css
+++ b/style.css
@@ -231,7 +231,7 @@ hr.divider {
 
 /*============footer============*/
 footer {
-	background-color:#787878;
+	/*background-color:#787878;*/
 	font-size: 18px;
 	color: #ffffff;
 }
@@ -250,3 +250,4 @@ footer {
 	color:#404040 ;
 	background-color:#ffffff ;
 }
+
